// Copyright 2020-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

message int32 {
    extensions 1 to 4 [
        declaration = {
            number: 1,
            full_name: ".x1",
            type: ".int32"
        },
        declaration = {
            number: 2,
            full_name: ".x2",
            type: ".int32"
        },
        declaration = {
            number: 3,
            full_name: ".y1",
            type: "int32"
        },
        declaration = {
            number: 4,
            full_name: ".y2",
            type: "int32"
        }
    ];
}

extend .int32 {
    optional .int32 x1 = 1;
    optional int32 x2 = 2;
    optional .int32 y1 = 3;
    optional int32 y2 = 4;
}